busybox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment
  namespace: iosis-tech-mainnet-juno
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox
        command:
          - sleep
          - "3600"
        volumeMounts:
        - name: juno-data
          mountPath: /var/lib/juno
      volumes:
      - name: juno-data
        persistentVolumeClaim:
          claimName: juno-pvc
