deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juno
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juno
  template:
    metadata:
      labels:
        app: juno
    spec:
      containers:
      - name: juno
        image: nethermind/juno
        ports:
        - containerPort: 6060
        volumeMounts:
        - name: juno-data
          mountPath: /var/lib/juno
        args:
        - "--http"
        - "--network=mainnet"
        - "--http-port=6060"
        - "--http-host=0.0.0.0"
        - "--db-path=/var/lib/juno"
        - "--eth-node=$(ETH_NODE_MAINNET)"
      volumes:
      - name: juno-data
        persistentVolumeClaim:
          claimName: juno-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: juno-svc
spec:
  ports:
  - port: 80
    targetPort: 6060
    protocol: TCP
    name: http
  selector:
    app: juno
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juno-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 0
spec:
  ingressClassName: nginx-ingress-prod
  tls:
    - hosts:
        - juno.mainnet.iosis.tech
      secretName: juno-mainnet-tls
  rules:
    - host: juno.mainnet.iosis.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: juno-svc
                port:
                  number: 80
